kubernetes-manifests/services.yaml
apiVersion: v1
kind: Service
metadata: 
  name: jwt-server
spec:
  selector:
    app: jwt-server
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: jwt-server
  labels:
    app: jwt-server
spec:
  type: NodePort
  selector:
    app: jwt-server
  ports:
  - port: 8000
    name: jwt-server
    targetPort: 8000
    nodePort: 32767
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
